Fixed overflow bugs
Search nav and projects now do not overflow their containers.

--- a/styles.css
+++ b/styles.css
@@ -200,13 +200,14 @@ header {
 #nav-search {
     grid-column: 2;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 1fr 1fr;
     padding: 16px;
 }
 
 .notes-avi-user {
     display: flex;
     align-items: center;
+    justify-content: flex-end;
     gap: clamp(1rem, 5%, 2rem);
 }
 
@@ -253,7 +254,7 @@ a:visited {
 }
 
 #search-bar {
-    flex: 75% 1 0;
+    flex: 0 1 100%;
     background-color: #e2e8f0;
     border-radius: 16px;
     width: 50%;
@@ -296,15 +297,10 @@ input#search-bar:focus {
     margin: 0.25rem 0px 0px 0px;
 }
 
-img {
-    width: 3rem;
-    align-self: center;
-}
-
 #actions {
     display: flex;
     align-self: center;
-    gap: 2rem;
+    gap: 32px;
 }
 
 .action-button {
@@ -328,9 +324,8 @@ main {
     grid-template-columns: 6fr 2fr;
     background-color: var(--shading-color);
     box-shadow: inset 0 5px 7px -5px #00000075;
-    gap: 2rem;
-    padding: 1rem;
-    height: 100vh;
+    gap: 32px;
+    padding: 16px;
 }
 
 #main-grid p {
